# rustcraft

./: AGENTS.md  Cargo.toml  README.md  config.json  run.sh
assets/textures/: blocks.json
docs/: ADDING_BLOCKS.md
src/: block.rs  camera.rs  config.rs  fps.rs  hotbar.rs  input.rs  main.rs  mesh.rs  physics.rs  raycast.rs  shader.wgsl  text.rs  text_shader.wgsl  texture.rs  world.rs
src/app/: mod.rs  state.rs
src/render/: mesh.rs  mod.rs  raster.rs  raytrace.rs  raytrace_compute.wgsl  raytrace_display.wgsl
