[package]
name = "rustcraft"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.15", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck"] }
image = { version = "0.24", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
